# data_clustering_contest_2021

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  deb-packages.txt  download_data.sh
libtgcat/: CMakeLists.txt
libtgcat-tester/: CMakeLists.txt  tester.c
libtgcat/include/: text_preprocessing.h  tgcat.h  tgcat_types.h
libtgcat/src/: language_detector.cpp  language_detector.h  text_preprocessing.cpp  tgcat.cpp  topic_detector.cpp  topic_detector.h
tools/text_preprocessing/: CMakeLists.txt  main.cpp
tools/viewer/: calc_metrics.py  gen_random_output.py  main.py
tools/viewer/templates/: base.html  channel.html  directory.html
